apps/grocy/grocy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grocy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: grocy-config
---
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  selector:
    app: grocy
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
