apps/grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  namespace: grocy
spec:
  ingressClassName: traefik
  rules:
    - host: grocy.apps.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocy
                port:
                  number: 80
